WIP: ipv6 routing over exits

--- a/roles/setup-wireguard-exit/templates/wgBridge.conf.j2
+++ b/roles/setup-wireguard-exit/templates/wgBridge.conf.j2
@@ -6,4 +6,4 @@ ListenPort = {{item.port}}
 PublicKey = {{item.wg_pubkey}}
 Endpoint = [{{item.mesh_ip}}]:{{item.port}}
 AllowedIPs = ::/0
-PersistentKeepalive = 25
+PersistentKeepalive = {{keepalive}}
